added code and styles to place icons

--- a/portfolio.html
+++ b/portfolio.html
@@ -134,6 +134,7 @@
     </main>
     <footer>
         <div class="container foot">
+          <div class="place">
         <a href="index.html" class="logo"><span class="footer-first">Web</span><span
                 class="footer-last">Studio</span></a>
         <address>
@@ -142,6 +143,11 @@
             <a href="mailto:info@example.com" class="link-touch">info@example.com</a>
             <a href="tel:+12127724150" class="link-touch">+1 212-772-4150</a>
         </address>
+        </div>
+        <div class="socialcont">
+          <h2 class="find-title">FIND US ON</h2>
+          <div class="socialize"></div>
+        </div>
         </div>
     </footer>
 </body>
