--- a/index.html
+++ b/index.html
@@ -32,8 +32,14 @@
         </div>
         <div class="box">
         <div class="link-header">
-            <a href="mailto:info@devstudio.com" class="link-header-mail">info@devstudio.com</a>
-            <a href="tel:+380961111111" class="link-header-tel">+38 096 111 11 11</a>
+            <a href="mailto:info@devstudio.com" class="link-header-mail">
+            <svg class="icon-envelope">
+                <use href="./images/icons.svg.svg#icon-envelope"></use>
+            </svg>info@devstudio.com</a>
+            <a href="tel:+380961111111" class="link-header-tel">
+             <svg class="icon-smartphone">
+                <use href="./images/icons.svg.svg#icon-smartphone"></use>
+             </svg>+38 096 111 11 11</a>
         </div>
         </div>
         </div>
@@ -50,28 +56,44 @@
             <div class="container">
               <ul class="adv">
                 <li class="adv-title">
-                    <div class="area"></div>
+                    <div class="area">
+                    <svg class="icons">
+                        <use href="./images/icons.svg.svg#icon-antenna"></use>
+                    </svg>    
+                    </div>
                     <h3 class="tittle">ATTENTION TO DETAILS</h3>
                     <p class="text">We go into all the details and processes
                         of your business to develop a
                         customized solution.</p>
                 </li>
                 <li class="adv-title">
-                    <div class="area"></div>
+                    <div class="area">
+                        <svg class="icons">
+                            <use href="./images/icons.svg.svg#icon-clock"></use>
+                        </svg>
+                    </div>
                     <h3 class="tittle">PUNCTUALITY</h3>
                     <p class="text">With us, you can feel safe and secure.
                         An important principle of the company:
                         respect your time and respect the agreed deadline</p> 
                 </li>
                 <li class="adv-title">
-                    <div class="area"></div>
+                    <div class="area">
+                        <svg class="icons">
+                            <use href="./images/icons.svg.svg#icon-diagram"></use>
+                        </svg>
+                    </div>
                     <h3 class="tittle">PLANNING</h3>
                     <p class="text">You will be able to observe and
                         participate in every phase of solution
                         development and implementation.</p>
                 </li>
                 <li class="adv-title">
-                    <div class="area"></div>
+                    <div class="area">
+                        <svg class="icons">
+                            <use href="./images/icons.svg.svg#icon-astronaut"></use>
+                        </svg>
+                    </div>
                     <h3 class="tittle">MODERN TECHNOLOGIES</h3>
                     <p class="text">We use innovative tools to solve
                         assigned tasks. It's time to simplify work
@@ -98,7 +120,38 @@
                     <div class="person">
                     <p class="name">Christopher Walker</p>
                     <p class="position">Product Designer</p>
-                    <div class="social"></div>
+                    
+                        <ul class="social-links">
+                            <li class="social-net">
+                                <a href="" class="net">
+                                    <svg class="icon">
+                                        <use href="./images/icons.svg.svg#icon-instagram"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="social-net">
+                                <a href="" class="net">
+                                    <svg class="icon">
+                                        <use href="./images/icons.svg.svg#icon-twitter"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="social-net">
+                                <a href="" class="net">
+                                    <svg class="icon">
+                                        <use href="./images/icons.svg.svg#icon-facebook"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="social-net">
+                                <a href="" class="net">
+                                    <svg class="icon">
+                                        <use href="./images/icons.svg.svg#icon-linkedin"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
+                    
 
                     </div>
                 </li>
