--- a/portfolio.html
+++ b/portfolio.html
@@ -32,8 +32,14 @@
         </div>
         <div class="box">
             <div class="link-header">
-            <a href="mailto:info@devstudio.com" class="link-header-mail">info@devstudio.com</a>
-            <a href="tel:+380961111111" class="link-header-tel">+38 096 111 11 11</a>
+            <a href="mailto:info@devstudio.com" class="link-header-mail">
+              <svg class="icon-envelope">
+                <use href="./images/icons.svg.svg#icon-envelope"></use>
+              </svg>info@devstudio.com</a>
+            <a href="tel:+380961111111" class="link-header-tel">
+              <svg class="icon-smartphone">
+                <use href="./images/icons.svg.svg#icon-smartphone"></use>
+              </svg>+38 096 111 11 11</a>
         </div>
         </div>
         </div>
