--- a/portfolio.html
+++ b/portfolio.html
@@ -151,8 +151,37 @@
         </address>
         </div>
         <div class="socialcont">
-          <h2 class="find-title">FIND US ON</h2>
-          <div class="socialize"></div>
+          <p class="find-title">FIND US ON</p>
+          <ul class="social-links-infooter">
+            <li class="social-net-infooter">
+              <a class="net-infooter" href="" target="_blank" rel="nofollow noopener noreferrer" aria-label="instagram icon">
+                <svg class="icon-infooter" width="20" height="20">
+                  <use href="./images/icons.svg.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-net-infooter">
+              <a class="net-infooter" href="" target="_blank" rel="nofollow noopener noreferrer" aria-label="twitter icon">
+                <svg class="icon-infooter" width="20" height="20">
+                  <use href="./images/icons.svg.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-net-infooter">
+              <a class="net-infooter" href="" target="_blank" rel="nofollow noopener noreferrer" aria-label="facebook icon">
+                <svg class="icon-infooter" width="20" height="20">
+                  <use href="./images/icons.svg.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-net-infooter">
+              <a class="net-infooter" href="" target="_blank" rel="nofollow noopener noreferrer" aria-label="linkedin icon">
+                <svg class="icon-infooter" width="20" height="20">
+                  <use href="./images/icons.svg.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
         </div>
         </div>
     </footer>
